--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "homebridge": ">0.4.53"
   },
   "main": "dist/index.js",
+  "funding": {
+    "type" : "paypal",
+    "url" : "https://paypal.me/Mantorok1"
+  },
   "scripts": {
     "lint": "eslint src/**.ts",
     "watch": "npm run build && npm link && nodemon",
@@ -45,14 +49,14 @@
     "concurrent-queue": "^7.0.2"
   },
   "devDependencies": {
-    "@types/node": "^14.6.0",
-    "@typescript-eslint/eslint-plugin": "^3.9.1",
-    "@typescript-eslint/parser": "^3.9.1",
+    "@types/node": "^14.6.2",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
     "eslint": "^7.7.0",
     "homebridge": "^1.1.2",
     "nodemon": "^2.0.4",
     "rimraf": "^3.0.2",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.7"
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.2"
   }
 }
