--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "async-mqtt": "^2.6.1",
     "concurrent-queue": "^7.0.2",
     "jsonpath": "^1.1.1",
+    "node-schedule": "^2.0.0",
     "pushover-notifications": "^1.2.2"
   },
   "devDependencies": {
@@ -59,6 +60,7 @@
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "@types/node-schedule": "^1.3.1"
   }
 }
