--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "displayName": "Rinnai Touch Platform",
   "name": "homebridge-rinnai-touch-platform",
-  "version": "3.4.5",
+  "version": "3.4.6",
   "description": "Homebridge Plugin to control heating/cooling via a Rinnai Touch WiFi Module",
   "license": "Apache-2.0",
   "repository": {
@@ -13,7 +13,7 @@
   },
   "engines": {
     "homebridge": "^1.3.0",
-    "node": "^14.18.2 || ^16.13.1"
+    "node": "^14.18.2 || ^16.13.1 || ^18.12.1"
   },
   "main": "dist/index.js",
   "funding": {
@@ -53,8 +53,8 @@
     "pushover-notifications": "^1.2.2"
   },
   "devDependencies": {
-    "@types/node": "^17.0.8",
-    "@types/node-schedule": "^1.3.2",
+    "@types/node": "^18.11.9",
+    "@types/node-schedule": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
     "eslint": "^8.6.0",
