--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "displayName": "Rinnai Touch Platform",
   "name": "homebridge-rinnai-touch-platform",
-  "version": "3.4.12",
+  "version": "3.4.13",
   "description": "Homebridge Plugin to control heating/cooling via a Rinnai Touch WiFi Module",
   "license": "Apache-2.0",
   "repository": {
@@ -12,8 +12,8 @@
     "url": "https://github.com/mantorok1/homebridge-rinnai-touch-platform/issues"
   },
   "engines": {
-    "homebridge": "^1.3.0",
-    "node": "^16.13.1 || ^18.12.1 || ^20.9.0"
+    "homebridge": "^1.6.0 || ^2.0.0-beta.0",
+    "node": "^18 || ^20 || ^22"
   },
   "main": "dist/index.js",
   "funding": {
